# LlmBrain-AK

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  SETUP.md  cuestionario.md  index.md  log.md  pyproject.toml
.github/ISSUE_TEMPLATE/: inconsistency-report.md  (+1 more)
schema/: decisiones.md
sources/: awesome-agent-skills.md  awesome-design-md.md  gstack-garry-tan.md
wiki/: _template.md  agent-sdk-hooks.md  agent-sdk-overview.md  agent-sdk-sessions.md  agent-sdk-subagentes.md  agent-skills-ecosystem.md  ai-compression-ratios.md  ai-development-workflows.md  ai-security-skills.md  arquitectura-del-sistema.md  awesome-claude-code.md  boil-the-lake.md  chatgpt-file-uploads.md  claude-code-agent-skills-catalog.md  claude-code-agent-teams.md  claude-code-best-practices.md  claude-code-claude-md-ejemplos.md  claude-code-cli-referencia.md  claude-code-context-window.md  claude-code-hooks-ecosystem.md  claude-code-hooks.md  claude-code-mcp.md  claude-code-memory.md  claude-code-orquestadores.md  claude-code-permisos.md  claude-code-settings.md  claude-code-skills.md  claude-code-slash-commands-catalog.md  claude-code-subagentes.md  claude-code-tooling-ecosystem.md  claude-code-workflow-patterns.md  context-engineering-patterns.md  design-md-format.md  design-patterns-dark-mode.md  design-patterns-shadow-systems.md  design-patterns-spacing.md  design-patterns-typography.md  design-system-industrial.md  design-tokens-comparativa.md  ejemplo-rag-vs-llm-wiki.md  (+29 more)
wikisearch/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  models.py  sync.py
(+10 files in other folders)
